Bug 1981852 - Override max-width from base menu styling in inContentDialog.css to fix alignment for menu items. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D260387

--HG--
extra : amend_source : adf156ad73bd456b470377070886dd37c61821ea

--- a/mail/themes/shared/mail/inContentDialog.css
+++ b/mail/themes/shared/mail/inContentDialog.css
@@ -225,7 +225,7 @@ dialog {
   padding: 0;
 }
 
-.dialog-menu-container {
+menu.dialog-menu-container {
   list-style-type: none;
   display: flex;
   align-items: center;
@@ -236,6 +236,7 @@ dialog {
   background-color: var(--dialog-background-color);
   position: sticky;
   bottom: 0;
+  max-width: none;
 
   &.two-columns {
     justify-content: space-between;
